#176776 by dww (based on work started by cwgordon07): Finally fixed the project release download table to respect the settings added in #203313 to select multiple supported branches and control specific branches where the -dev snapshot should be visible.  This makes the UI a little bit more like the Update status UI.  Also fixed the bug where the cached download table might include edit links for users who can't use them, and are missing for users who should have them (#203438).

--- a/release/project_release.css
+++ b/release/project_release.css
@@ -23,7 +23,7 @@ table.releases {
 }
 
 table.releases .release-title {
-  width: 30%;
+  width: 15%;
 }
 
 table.releases .release-date {
@@ -31,9 +31,33 @@ table.releases .release-date {
 }
 
 table.releases .release-size {
-  width: 15%;
+  width: 10%;
 }
 
 table.releases .release-links {
-  width: 40%;
+  width: 33%;
+}
+
+table.releases .release-status {
+  width: 25%;
+}
+
+table.releases .release-icon {
+  width: 2%;
+}
+
+table.releases tr.ok {
+  background-color: #dfd;
+  border-color: #beb;
+}
+
+table.releases tr.warning {
+  background-color: #ffd;
+  border-color: #eeb;
+}
+
+table.releases tr.error {
+  background-color: #fcc;
+  border-color: #ebb;
+  color: #200;
 }
